--- a/style.css
+++ b/style.css
@@ -1,86 +1,91 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-  background-color: black;
+    background-color: black;
 }
 
 .main {
-  background-image: url(assets/images/bg.jpg);
-  width: 100vw;
-  height: 98vh;
-  position: relative;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-bottom: 7px solid rgb(54, 53, 53);
+    background-image: url(assets/images/bg.jpg);
+    width: 100vw;
+    height: 98vh;
+    position: relative;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom: 5px solid rgb(192, 15, 15);
 }
 
 .box {
-  position: absolute;
-  top: 0;
-  height: 98vh;
-  width: 100vw;
-  background-color: black;
-  opacity: 0.7;
+    position: absolute;
+    top: 0;
+    height: 98vh;
+    width: 100vw;
+    background-color: black;
+    opacity: 0.7;
 }
 
 nav div img {
-  height: 42px;
+    height: 42px;
 }
 
 nav {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80vw;
-  height: 90px;
-  margin: 0% auto;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 78vw;
+    height: 90px;
+    margin: 0% auto;
 }
 
 .hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-  z-index: 1;
-  color: white;
-  width: 40vw;
-  height: 60vh;
-  margin: 0 auto;
-  text-align: center;
-  gap: 20px;
-  margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 1;
+    color: white;
+    width: 40vw;
+    height: 60vh;
+    margin: 0 auto;
+    text-align: center;
+    gap: 20px;
+    margin-top: 70px;
 }
 
-.hero > :nth-child(1) {
-  font-size: 56px;
-  font-weight: 900;
+.hero> :nth-child(1) {
+    font-size: 56px;
+    font-weight: 900;
 }
 
-.hero > :nth-child(2) {
-  font-size: 20px;
-  font-weight: 500;
+.hero> :nth-child(2) {
+    font-size: 20px;
+    font-weight: 500;
 }
 
-.hero > :nth-child(3) {
-  font-weight: 400;
+.hero> :nth-child(3) {
+    font-weight: 400;
 }
 
-nav > :nth-child(2) {
-  display: flex;
-  gap: 15px;
+nav> :nth-child(2) {
+    display: flex;
+    gap: 15px;
 }
 
 .btn {
-  height: 30px;
-  padding: 3px 10px;
+    height: 30px;
+    padding: 3px 10px;
+    font-weight: 400;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav-red-btn {
@@ -91,8 +96,9 @@ nav > :nth-child(2) {
     border: 0px;
     font-size: 14px;
     font-weight: 500;
-
+    padding: 3px 17px;
 }
+
 .main-red-btn {
     background-color: red;
     color: white;
@@ -100,5 +106,82 @@ nav > :nth-child(2) {
     cursor: pointer;
     border: 0px;
     font-size: 24px;
+    font-weight: 600;
+    height: 50px;
+    padding: 5px 25px;
+}
+
+.tr-btn {
+    padding: 5px 40px;
+    font-size: 17px;
+    background-color: rgba(0, 0, 0, 0.162);
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.315);
+    border-radius: 4px;
+}
+
+.ip-sec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 50vw;
+    margin: 20px 20px;
+
+}
+
+.email {
+    width: 370px;
+    background-color: rgba(16, 16, 16, 0.833);
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.315);
+    border-radius: 4px;
+    height: 50px;
+    padding-left: 10px;
+    font-size: 18px;
+}
+
+.t-txt{
+    color: white;
+    font-size: 24px;
     font-weight: 500;
+}
+
+.m-div{
+    width: 80vw;
+    margin: 50px auto;
+}
+
+.trending{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    margin: auto;
+    gap: 50px;
+    position: relative;
+}
+
+.trnd-card{
+    height: 250px;
+    width: 200px;
+}
+
+.trnd-card img {
+    height: 250px;
+    border-radius: 10px;
+
+}
+
+.trnd-card h1 {
+
+    font-size: 100px;
+    font: 900;
+    z-index: 12;
+    color: rgb(0, 0, 0);
+    position: absolute;
+    bottom: 0px;
+    left: -10px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
 }
