--- a/style.css
+++ b/style.css
@@ -185,3 +185,8 @@ nav> :nth-child(2) {
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
 }
+
+.trnd-card:hover  {
+    transform: scale(1.1);
+    transition: all 0.4s ease;
+}
