--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ nav> :nth-child(2) {
     bottom: 0px;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.71) ;
 }
 
 .trnd-card:hover  {
