--- a/style.css
+++ b/style.css
@@ -6,24 +6,26 @@
 
 body {
     background-color: black;
+    overflow-x: hidden;
 }
 
 .main {
     background-image: url(assets/images/bg.jpg);
-    width: 100vw;
+    width: 100%;
     height: 98vh;
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom: 5px solid rgb(192, 15, 15);
+    overflow-x: hidden;
 }
 
 .box {
     position: absolute;
     top: 0;
     height: 98vh;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     opacity: 0.7;
 }
@@ -141,18 +143,21 @@ nav> :nth-child(2) {
     font-size: 18px;
 }
 
-.t-txt{
+.t-txt {
     color: white;
     font-size: 24px;
     font-weight: 500;
 }
 
-.m-div{
+.m-div {
     width: 80vw;
-    margin: 50px auto;
+    margin: 0px auto;
+    margin-top: 80px;
+    margin-bottom: 15px;
+    font-weight: 800;
 }
 
-.trending{
+.trending {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,7 +167,7 @@ nav> :nth-child(2) {
     position: relative;
 }
 
-.trnd-card{
+.trnd-card {
     height: 250px;
     width: 200px;
 }
@@ -183,10 +188,88 @@ nav> :nth-child(2) {
     bottom: 0px;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.71) ;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.71);
 }
 
-.trnd-card:hover  {
+.trnd-card:hover {
     transform: scale(1.1);
     transition: all 0.4s ease;
+}
+
+.icon-container {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows:  1fr;
+    width: 80vw;
+    margin: 0px auto;
+    gap: 20px;
+}
+
+.icon-cards {
+    width: 300px;
+    height: 270px;
+    background: linear-gradient(145deg, #192246, #210f19);
+    border-radius: 20px;
+    position: relative;
+    color: white;
+
+}
+
+.icon-cards h2 {
+    font-size: 24px;
+    font-weight: 600;
+    width: 90%;
+    margin: 20px auto;
+}
+
+.icon-cards p {
+    font-size: 16px;
+    width: 90%;
+    margin: 20px auto;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.icon {
+
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    height: 70px;
+}
+
+.faq{
+    color: white;
+    height: 85px;
+    width: 80vw;
+    background-color: #2d2d2d;
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.faq h2{
+    
+    font-size: 24px;
+    font-weight: 500;
+    width: 87%;
+    margin: 0px auto;
+}
+
+.faq img{
+    height: 40px;
+    margin: 0px auto;
+
+}
+
+.faq:hover{
+    background-color: rgb(66, 66, 66);
+    transition: all 0.3s ease;
+}
+
+/* Make plus icons appear white */
+img[src*="plus.png"] {
+    filter: invert(1) brightness(100%);
 }
