--- a/style.css
+++ b/style.css
@@ -1,275 +1,318 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-    background-color: black;
-    overflow-x: hidden;
+  background-color: black;
+  overflow-x: hidden;
 }
 
 .main {
-    background-image: url(assets/images/bg.jpg);
-    width: 100%;
-    height: 98vh;
-    position: relative;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-bottom: 5px solid rgb(192, 15, 15);
-    overflow-x: hidden;
+  background-image: url(assets/images/bg.jpg);
+  width: 100%;
+  height: 98vh;
+  position: relative;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-bottom: 5px solid rgb(192, 15, 15);
+  overflow-x: hidden;
 }
 
 .box {
-    position: absolute;
-    top: 0;
-    height: 98vh;
-    width: 100%;
-    background-color: black;
-    opacity: 0.7;
+  position: absolute;
+  top: 0;
+  height: 98vh;
+  width: 100%;
+  background-color: black;
+  opacity: 0.7;
 }
 
 nav div img {
-    height: 42px;
+  height: 42px;
 }
 
 nav {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 78vw;
-    height: 90px;
-    margin: 0% auto;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 78vw;
+  height: 90px;
+  margin: 0% auto;
 }
 
 .hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    z-index: 1;
-    color: white;
-    width: 40vw;
-    height: 60vh;
-    margin: 0 auto;
-    text-align: center;
-    gap: 20px;
-    margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+  color: white;
+  width: 40vw;
+  height: 60vh;
+  margin: 0 auto;
+  text-align: center;
+  gap: 20px;
+  margin-top: 70px;
 }
 
-.hero> :nth-child(1) {
-    font-size: 56px;
-    font-weight: 900;
+.hero > :nth-child(1) {
+  font-size: 56px;
+  font-weight: 900;
 }
 
-.hero> :nth-child(2) {
-    font-size: 20px;
-    font-weight: 500;
+.hero > :nth-child(2) {
+  font-size: 20px;
+  font-weight: 500;
 }
 
-.hero> :nth-child(3) {
-    font-weight: 400;
+.hero > :nth-child(3) {
+  font-weight: 400;
 }
 
-nav> :nth-child(2) {
-    display: flex;
-    gap: 15px;
+nav > :nth-child(2) {
+  display: flex;
+  gap: 15px;
 }
 
 .btn {
-    height: 30px;
-    padding: 3px 10px;
-    font-weight: 400;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 30px;
+  padding: 3px 10px;
+  font-weight: 400;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-red-btn {
-    background-color: red;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    border: 0px;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 3px 17px;
+  background-color: red;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 0px;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 3px 17px;
 }
 
 .main-red-btn {
-    background-color: red;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    border: 0px;
-    font-size: 24px;
-    font-weight: 600;
-    height: 50px;
-    padding: 5px 25px;
+  background-color: red;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 0px;
+  font-size: 24px;
+  font-weight: 600;
+  height: 50px;
+  padding: 5px 25px;
 }
 
 .tr-btn {
-    padding: 5px 40px;
-    font-size: 17px;
-    background-color: rgba(0, 0, 0, 0.162);
-    color: white;
-    border: 1px solid rgba(255, 255, 255, 0.315);
-    border-radius: 4px;
+  padding: 5px 40px;
+  font-size: 17px;
+  background-color: rgba(0, 0, 0, 0.162);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.315);
+  border-radius: 4px;
 }
 
 .ip-sec {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    width: 50vw;
-    margin: 20px 20px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 50vw;
+  margin: 20px 20px;
 }
 
 .email {
-    width: 370px;
-    background-color: rgba(16, 16, 16, 0.833);
-    color: white;
-    border: 1px solid rgba(255, 255, 255, 0.315);
-    border-radius: 4px;
-    height: 50px;
-    padding-left: 10px;
-    font-size: 18px;
+  width: 370px;
+  background-color: rgba(16, 16, 16, 0.833);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.315);
+  border-radius: 4px;
+  height: 50px;
+  padding-left: 10px;
+  font-size: 18px;
 }
 
 .t-txt {
-    color: white;
-    font-size: 24px;
-    font-weight: 500;
+  color: white;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 .m-div {
-    width: 80vw;
-    margin: 0px auto;
-    margin-top: 80px;
-    margin-bottom: 15px;
-    font-weight: 800;
+  width: 80vw;
+  margin: 0px auto;
+  margin-top: 80px;
+  margin-bottom: 15px;
+  font-weight: 800;
 }
 
 .trending {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    margin: auto;
-    gap: 50px;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  margin: auto;
+  gap: 50px;
+  position: relative;
 }
 
 .trnd-card {
-    height: 250px;
-    width: 200px;
+  height: 250px;
+  width: 200px;
 }
 
 .trnd-card img {
-    height: 250px;
-    border-radius: 10px;
-
+  height: 250px;
+  border-radius: 10px;
 }
 
 .trnd-card h1 {
-
-    font-size: 100px;
-    font: 900;
-    z-index: 12;
-    color: rgb(0, 0, 0);
-    position: absolute;
-    bottom: 0px;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(255, 255, 255);
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.71);
+  font-size: 100px;
+  font: 900;
+  z-index: 12;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  bottom: 0px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.71);
 }
 
 .trnd-card:hover {
-    transform: scale(1.1);
-    transition: all 0.4s ease;
+  transform: scale(1.1);
+  transition: all 0.4s ease;
 }
 
 .icon-container {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows:  1fr;
-    width: 80vw;
-    margin: 0px auto;
-    gap: 20px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  width: 80vw;
+  margin: 0px auto;
+  gap: 20px;
 }
 
 .icon-cards {
-    width: 300px;
-    height: 270px;
-    background: linear-gradient(145deg, #192246, #210f19);
-    border-radius: 20px;
-    position: relative;
-    color: white;
-
+  width: 300px;
+  height: 270px;
+  background: linear-gradient(145deg, #192246, #210f19);
+  border-radius: 20px;
+  position: relative;
+  color: white;
 }
 
 .icon-cards h2 {
-    font-size: 24px;
-    font-weight: 600;
-    width: 90%;
-    margin: 20px auto;
+  font-size: 24px;
+  font-weight: 600;
+  width: 90%;
+  margin: 20px auto;
 }
 
 .icon-cards p {
-    font-size: 16px;
-    width: 90%;
-    margin: 20px auto;
-    font-weight: 400;
-    color: rgba(255, 255, 255, 0.7);
+  font-size: 16px;
+  width: 90%;
+  margin: 20px auto;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .icon {
-
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    height: 70px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  height: 70px;
 }
 
-.faq{
-    color: white;
-    height: 85px;
-    width: 80vw;
-    background-color: #2d2d2d;
-    margin: 10px auto;
-    display: flex;
-    align-items: center;
-    position: relative;
+.faq {
+  color: white;
+  height: 85px;
+  width: 80vw;
+  background-color: #2d2d2d;
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
-.faq h2{
-    
-    font-size: 24px;
-    font-weight: 500;
-    width: 87%;
-    margin: 0px auto;
-}
-
-.faq img{
-    height: 40px;
-    margin: 0px auto;
-
+.faq h2 {
+  font-size: 24px;
+  font-weight: 500;
+  width: 87%;
+  margin: 0px auto;
 }
 
-.faq:hover{
-    background-color: rgb(66, 66, 66);
-    transition: all 0.3s ease;
+.faq img {
+  height: 40px;
+  margin: 0px auto;
+}
+
+.faq:hover {
+  background-color: rgb(66, 66, 66);
+  transition: all 0.3s ease;
 }
 
 /* Make plus icons appear white */
 img[src*="plus.png"] {
-    filter: invert(1) brightness(100%);
+  filter: invert(1) brightness(100%);
+}
+
+.above-footer-button {
+  width: 80vw;
+  margin: 0px auto;
+  margin-top: 70px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer {
+  width: 80vw;
+  height: 700px;
+  margin: 50px auto;
+  color: white;
+}
+
+.ft-grid {
+  width: 100%;
+  margin: 30px auto;
+  height: 25%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.ft-grid p {
+  text-decoration: underline;
+}
+
+.footer h5 {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.footer p {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 30px;
+}
+
+.ft-btn {
+  margin-top: 50px;
 }
